@@ -8,6 +8,8 @@ not yet  BJH  Release 10.42.00
 
               pamtosvg: fix various bugs: crash, poor tracing, memory leaks.
 
+              pamtosvg: fix log file name with Standard Input.
+              
               ppmtoarbtxt: fix array bounds violation with really large
               replacement sequence.
 
